src/test/ui/issues/issue-51714.stderr
error[E0572]: return statement outside of function body
  --> $DIR/issue-51714.rs:2:14
   |
LL |     |_:  [_; return || {}] | {};
   |              ^^^^^^^^^^^^

error[E0572]: return statement outside of function body
  --> $DIR/issue-51714.rs:5:10
   |
LL |     [(); return || {}];
   |          ^^^^^^^^^^^^

error[E0572]: return statement outside of function body
  --> $DIR/issue-51714.rs:8:10
   |
LL |     [(); return |ice| {}];
   |          ^^^^^^^^^^^^^^^

error[E0572]: return statement outside of function body
  --> $DIR/issue-51714.rs:11:10
   |
LL |     [(); return while let Some(n) = Some(0) {}];
   |          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0165]: irrefutable while-let pattern
  --> $DIR/issue-51714.rs:11:27
   |
LL |     [(); return while let Some(n) = Some(0) {}];
   |                           ^^^^^^^ irrefutable pattern

error: aborting due to 5 previous errors

Some errors occurred: E0165, E0572.
For more information about an error, try `rustc --explain E0165`.
